[package]
name = "dirhash"
version = "0.1.0"
authors = ["Vince Mutolo <vlmutolo@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.5"
anyhow = "1.0.31"
crossbeam-channel = "0.4.3"
num_cpus = "1.13.0"
walkdir = "2.3.1"
structopt = "0.3.15"
once_cell = "1.4.0"
